# sparse-index

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  README.zh-CN.md  build.rs  build.rs.in  cbindgen.toml  rustfmt.toml
benchmark/: BM25SearchBenchmark.h  CMakeLists.txt  IndexDocumentBenchmark.h  MsMacroLoader.cpp  MsMacroLoader.h  main.cpp
bitpacker/: Cargo.toml
bitpacker/src/: bitpacker.rs  blocked_bitpacker.rs  lib.rs
bitpacker/src/filter_vec/: avx2.rs  mod.rs
common/: Cargo.toml
common/src/: bitset.rs  byte_count.rs  datetime.rs  file_slice.rs  group_by.rs  json_path_writer.rs  lib.rs  serialize.rs  vint.rs  writer.rs
contrib/: CMakeLists.txt
datasets/: download.sh
include/: sparse_index.h  sparse_index_cbindgen.h  sparse_index_cxx.h
ownedbytes/: Cargo.toml
ownedbytes/src/: lib.rs
src/: future_result.rs  lib.rs  macros.rs
src/api/: mod.rs
src/api/clickhouse/: ffi_index_manager.rs  ffi_index_reader.rs  ffi_logger_setup.rs  index_search.rs  mod.rs  simple_test.rs
src/api/clickhouse/api/: ffi_index_manager.rs  ffi_index_reader.rs
src/api/clickhouse/cache/: index_reader_bridge.rs  index_writer_bridge.rs  mod.rs
src/api/clickhouse/converter/: cxx_converter_impl.rs  mod.rs
src/api/clickhouse/implements/: ffi_index_manager_impl.rs  ffi_index_reader_impl.rs
src/api/clickhouse/utils/: error_handler.rs  index_manager.rs  logger_bridge.rs  logger_config.rs  mod.rs
src/api/cpp/: index_manager.rs  index_search.rs  mod.rs  utils.rs
src/api/cxx_ffi/: ffi_logger_setup.rs  mod.rs  simple_test.rs
src/api/cxx_ffi/api/: ffi_index_manager.rs  ffi_index_reader.rs  mod.rs
src/api/cxx_ffi/cache/: index_reader_bridge.rs  index_writer_bridge.rs  mod.rs
src/api/cxx_ffi/converter/: cxx_converter_impl.rs  cxx_converter_strategy.rs  mod.rs
src/api/cxx_ffi/implements/: ffi_index_manager_impl.rs  ffi_index_reader_impl.rs  mod.rs
src/api/cxx_ffi/utils/: error_handler.rs  index_manager.rs  logger_bridge.rs  logger_config.rs  mod.rs
src/common/: alive_bitset.rs  anonymize.rs  constants.rs  converter.rs  errors.rs  executor.rs  file_operations.rs  mod.rs  top_k.rs  types.rs  version.rs
src/common/cache/: global_cache.rs  mod.rs  ram_builder_cache.rs
src/core/: index_searcer.rs  loader.rs  mod.rs  search_context.rs
src/core/common/: madvise.rs  mmap_ops.rs  mod.rs  sparse_index_base.rs  storage_version.rs  types.rs
src/core/common/ops/: bytes_ops.rs  file_ops.rs  madvise.rs  mmap_ops.rs  mod.rs
src/core/common/types/: aliases.rs  mod.rs  weight.rs
src/core/dispatch/: generic_inverted_index.rs  generic_posting_iterator.rs  generic_ram_builder.rs  generic_ram_index.rs  mod.rs
src/core/inverted_index/: README.md  errors.rs  inverted_index_compressed_immutable_ram.rs  inverted_index_compressed_mmap.rs  inverted_index_immutable_ram.rs  inverted_index_mmap.rs  inverted_index_ram.rs  inverted_index_ram_builder.rs  mod.rs
src/core/inverted_index/common/: inverted_index_config.rs  inverted_index_meta.rs  inverted_index_metrics.rs  mod.rs
src/core/inverted_index/compressed_mmap/: compressed_inverted_index_mmap.rs  compressed_inverted_index_mmap_config.rs  compressed_inverted_index_mmap_manager.rs  compressed_inverted_index_mmap_merger.rs  compressed_inverted_index_mmap_meta.rs  compressed_posting_list_header.rs  mod.rs
src/core/inverted_index/compressed_ram/: inverted_index_compressed_ram.rs  inverted_index_compressed_ram_builder.rs  mod.rs
src/core/inverted_index/enums/: inverted_index_enum.rs  mod.rs
src/core/inverted_index/mmap/: inverted_index_mmap.rs  inverted_index_mmap_config.rs  inverted_index_mmap_manager.rs  inverted_index_mmap_merger.rs  inverted_index_mmap_meta.rs  mod.rs  posting_list_header.rs
src/core/inverted_index/ram/: inverted_index_ram.rs  inverted_index_ram_builder.rs  mod.rs
src/core/inverted_index/traits/: inverted_index.rs  inverted_index_mmap_access.rs  inverted_index_ram_access.rs  inverted_index_ram_builder_trait.rs  meta.rs  mmap_index.rs  mod.rs  ram_index.rs  ram_index_builder.rs  storage_version.rs
src/core/posting_list/: errors.rs  mod.rs  posting_list_merge.rs
src/core/posting_list/compress/: compressed_posting_block.rs  compressed_posting_builder.rs  compressed_posting_iterator.rs  compressed_posting_list.rs  compressed_posting_list_merger.rs  compressed_posting_list_view.rs  mod.rs
src/core/posting_list/compressed/: README.md  comp_posting_chunk.rs  comp_posting_list.rs  comp_posting_list_builder.rs  comp_posting_list_iterator.rs  comp_posting_list_store_size.rs  comp_posting_list_view.rs  mod.rs
src/core/posting_list/element/: extended_element.rs  mod.rs  simple_element.rs
src/core/posting_list/encoder/: mod.rs  vint.rs
src/core/posting_list/simple/: mod.rs  posting_list.rs  posting_list_builder.rs  posting_list_iterator.rs  (+1 more)
src/core/scores/: README.md  mod.rs  pooled_scores_handle.rs  scores_memory_pool.rs  sparse_bitmap.rs  top_k.rs
src/core/searcher/: mod.rs  prune_generic_posting.rs  search_env.rs  search_posting_iterator.rs  searcher.rs
src/core/sparse_vector/: mod.rs  remapped_sparse_vector.rs  sparse_vector.rs  utils.rs
src/directory/: directory.rs  directory_lock.rs  error.rs  file_watcher.rs  footer.rs  managed_directory.rs  mmap_directory.rs  mod.rs  ram_directory.rs  watch_event_router.rs
src/index/: index.rs  index_builder.rs  index_builder_cache.rs  index_meta.rs  index_settings.rs  inverted_index_cache.rs  mod.rs  segment.rs  segment_component.rs  segment_reader.rs  sparse_index_config.rs  sparse_storage.rs  sparse_vector_index.rs  vector_index_enum.rs
src/indexer/: doc_opstamp_mapping.rs  index_writer.rs  index_writer_status.rs  log_merge_policy.rs  merge_operation.rs  merge_policy.rs  merger.rs  mod.rs  operation.rs  prepared_commit.rs  segment_entry.rs  segment_manager.rs  segment_register.rs  segment_updater.rs  segment_writer.rs  single_segment_index_writer.rs  stamper.rs
src/reader/: index_reader.rs  mod.rs  searcher.rs  warming.rs
src/sparse_index/: mod.rs  utils.rs
src/sparse_index/config/: mod.rs  sparse_index_config.rs
(+13 files in other folders)
