[package]
name = "sparse_index"
version = "0.1.0"
authors = ["MochiXu <mochi_xu@icloud.com>"]
edition = "2021"

[lib]
name = "sparse_index" # library name
# crate-type = ["cdylib", "staticlib", "lib"]
crate-type = ["staticlib", "rlib"]


[dependencies]
ordered-float = "4.2"
half = "2.4.1"
itertools = "0.13.0"
validator = "0.18.1"
rand = "0.8.5"
memmap2 = "0.9.4"
serde_json = "1.0.122"
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
parking_lot = "0.12.3"
atomicwrites = "0.4.3"
bincode = "1.3.3"
thiserror = "1.0.63"
semver = "1.0.23"
bitpacking = "0.9.2"
tempfile = "3.12.0"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
schemars = "0.8.21"
chrono = "0.4.38"
atomic_refcell = "0.1.13"
cxx = "1.0.119"
once_cell = "1.19.0"
generic-tests = "0.1.2"
flurry = "0.5.1"


[build-dependencies]
cxx-build = "1.0.119"

[profile.relwithdebinfo]
inherits = "release"
debug = true